@@ -40,3 +40,4 @@ t/11_sopen_fh_leak.t                     See if sopen() leaks filehandles
 t/12_variables.t                         See if $ErrStr, $Trace and $Retry variables work
 t/13_critic.t                            See if coding style is OK
 t/14_pod.t                               See if POD is OK
+t/15_pod_coverage.t                      See if POD coverage is OK
